completed desktop hero section with navigation. Tutorial Session with Thelma

--- a/brisksmm/index.html
+++ b/brisksmm/index.html
@@ -47,7 +47,57 @@
     <!-- End of Header Navigation Area -->
 
     <!-- Main Area -->
+    <main class="site-primary">
+      <!-- Hero Section -->
+      <section class="hero">
+        <div class="briskcontainer">
+          <div class="briskhero">
+            <!-- Hero Text Content Area -->
+            <div class="briskherotext">
+              <h1 class="herotitle">The Few. The Proud. The Ice Cream.</h1>
+              <p class="exercpt">
+                Now, after a century of great advertising, not every tagline
+                could make it onto the list. Notable runners-up include “It’s So
+                Simple for Polaroid.
+              </p>
+              <div class="herobtnarea">
+                <button class="quotebtn">Get a free quote</button>
+                <button class="quotebtn learnmore">Read more</button>
+              </div>
+            </div>
+            <!-- End of Hero Text Content Area -->
 
+            <!-- Hero Image Area -->
+            <div class="briskheroimg">
+              <img src="./assets/img/hero.png" alt="Hero" class="heroimg" />
+            </div>
+            <!-- End of Hero Image Area -->
+          </div>
+        </div>
+
+        <div class="briskherosettingsarea">
+          <div class="brisksettings">
+            <span></span>
+            <div>
+              <img src="./assets/icons/book.svg" alt="" />
+            </div>
+            <span></span>
+            <div>
+              <img src="./assets/icons/message.svg" alt="" />
+            </div>
+            <span></span>
+            <div>
+              <img src="./assets/icons/trophy.svg" alt="" />
+            </div>
+            <span></span>
+            <div class="settingslast">
+              <img src="./assets/icons/cart.svg" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- End of Hero Section -->
+    </main>
     <!-- End of Main Area -->
 
     <!-- Footer Area -->
