completed second tutorial session with Thelma for Desktop Screens

--- a/brisksmm/index.html
+++ b/brisksmm/index.html
@@ -97,6 +97,59 @@
         </div>
       </section>
       <!-- End of Hero Section -->
+
+      <!-- Client Area Section -->
+      <section class="clientarea briskcontainer">
+        <!-- Client Images -->
+        <div class="clientlogos">
+          <img src="./assets/img/client6.svg" alt="Client 1" />
+          <img src="./assets/img/client1.svg" alt="Client 1" />
+          <img src="./assets/img/client2.svg" alt="Client 1" />
+          <img src="./assets/img/client3.svg" alt="Client 1" />
+          <img src="./assets/img/client4.svg" alt="Client 1" />
+          <img src="./assets/img/client5.svg" alt="Client 1" />
+        </div>
+        <!-- End of Client Images -->
+
+        <!-- Dog Image Area -->
+        <div class="dogimagearea">
+          <div class="dogimagetextcontent">
+            <h2 class="dogimagetitle">
+              Double Your Pleasure. Double Your Fun.
+            </h2>
+            <div class="dogimagespancontent">
+              <div class="dogimagespanarea">
+                <img src="./assets/icons/check.svg" alt="Check" />
+                <span class="dogparagraph">
+                  Lazy loading increases page speed without impacting image
+                  quality.
+                </span>
+              </div>
+              <div class="dogimagespanarea">
+                <img src="./assets/icons/check.svg" alt="Check" />
+                <span class="dogparagraph">
+                  You lose sales for every second it takes an image or a page to
+                  load.
+                </span>
+              </div>
+              <div class="dogimagespanarea">
+                <img src="./assets/icons/check.svg" alt="Check" />
+                <span class="dogparagraph">
+                  Using Pilo to increase image load times can increase
+                  conversions up to 20%
+                </span>
+              </div>
+            </div>
+            <button class="dogimagebtn">Get a free quote</button>
+          </div>
+
+          <div class="dogimagecontent">
+            <img src="./assets/img/dog.svg" alt="dog" />
+          </div>
+        </div>
+        <!-- End Dog Image Area -->
+      </section>
+      <!-- End of Client Area Section -->
     </main>
     <!-- End of Main Area -->
 
